Website: - Prevented the mod section video background from overflowing horizontally when the browser window's width is very small.

--- a/web-src/src/style.styl
+++ b/web-src/src/style.styl
@@ -253,6 +253,7 @@ label
 
 #mod-section
   background-color: #0008
+  overflow-x: hidden
 
 #mod-section .section-panel
   min-height: 580px
